--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ body {
 
 button { 
     padding: 10px;
+    color: black;
+    border-radius: 15px;
+
+}
+button:hover{
+    background-color: rgba(0, 225, 255, 0.808);
 }
 
 div {
